--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -6,12 +6,22 @@ on:
     branches: [ "main" ]
 
 jobs:
-  deploy:
+  scanning:
+    name: TruffleHog Enterprise scan
     runs-on: ubuntu-latest
     steps:
-    - name: Trufflehog scan
-      uses: trufflesecurity/TruffleHog-Enterprise-Github-Action
-      
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0 # fetch all history so multiple commits can be scanned
+      - name: TruffleHog Enterprise scan
+        uses: trufflesecurity/TruffleHog-Enterprise-Github-Action@main
+        with:
+            args: --fail-verified ${{ github.event.repository.default_branch }} HEAD
+
+  deploy:
+    runs-on: ubuntu-latest
+
     - name: Checkout code
       uses: actions/checkout@v3
 
