--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -6,24 +6,17 @@ on:
     branches: [ "main" ]
 
 jobs:
-  scanning:
-
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0 # fetch all history so multiple commits can be scanned
-      - name: TruffleHog Enterprise scan
-        uses: trufflesecurity/TruffleHog-Enterprise-Github-Action@main
-        with:
-            args: --fail-verified ${{ github.event.repository.default_branch }} HEAD
-
   deploy:
     runs-on: ubuntu-latest
 
+    steps:
     - name: Checkout code
       uses: actions/checkout@v3
+
+    - name: Install TruffleHog
+      run: |
+        pip install truffleHog
+        trufflehog filesystem --regex --entropy=True .
 
     - name: Install kubectl
       uses: azure/setup-kubectl@v2.0
