--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -12,11 +12,26 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
 
     - name: Install TruffleHog
       run: |
         pip install truffleHog
-        trufflehog filesystem --regex --entropy=True --json ./
+        
+    - name: TruffleHog OSS
+      id: trufflehog
+      uses: trufflesecurity/trufflehog@add-actions-cli-switch
+      continue-on-error: true
+      with: 
+        path: ./ 
+        base: "${{ github.event.repository.default_branch }}" 
+        head: HEAD 
+        extra_args: --debug --only-verified .
+
+    - name: Scan Results Status 
+        if: steps.trufflehog.outcome == 'failure' 
+        run: exit 1
 
     - name: Install kubectl
       uses: azure/setup-kubectl@v2.0
