--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -19,6 +19,7 @@ jobs:
       run: |
         pip install truffleHog
         pwd
+        trufflehog filesystem /home/runner/work/app1/app1
 
     - name: Install kubectl
       uses: azure/setup-kubectl@v2.0
