Adding snyk scan

--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -1,5 +1,11 @@
 name: Node js app deploy to EKS
 on:
+  workflow_dispatch:
+    inputs:
+      name:
+        description: 'Eniyan'
+        required: true
+        default: 'World'
   push:
     branches: [ "main" ]
   pull_request:
