--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -54,7 +54,7 @@ jobs:
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@0.20.0
       with:
-        image-ref: '$REGISTRY/$REPOSITORY:$IMAGE_TAG'
+        image-ref: '304520711562.dkr.ecr.us-east-1.amazonaws.com/app1:1.1'
         format: 'sarif'
         output: 'trivy-results.sarif'
 
