--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -27,12 +27,9 @@ jobs:
 
     - name: SAST-SEMGREP
       run:
+        python -m pip install --upgrade pip
         python3 -m pip install semgrep
-        semgrep --version
-        semgrep \
-        --sarif --output report.sarif \
-        --metrics=off \
-        --config="p/default"
+        python -m semgrep --config "p/ci" --config auto . --output $(date +"%d-%m-%Y").json --json > scanSummry.txt 2>&1
 
     - name: Install kubectl
       uses: azure/setup-kubectl@v2.0
