Modifying SAST-SEMGREP Config

--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -28,7 +28,7 @@ jobs:
     - name: SAST-SEMGREP
       run:
         python3 -m pip install semgrep
-        $secrets.SEMGREP_APP_TOKEN semgrep login
+        semgrep login
         semgrep ci
 
     - name: Install kubectl
