--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -15,7 +15,15 @@ jobs:
       with:
         fetch-depth: 0
   
-  scan: 
+  security-checks:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+
     - name: Install TruffleHog
       run: 
         docker run --rm -v "$GITHUB_WORKSPACE:/tmp" trufflesecurity/trufflehog:latest --fail --no-update git file:///tmp/
@@ -25,13 +33,23 @@ jobs:
       continue-on-error: true
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-  
-  sast: 
+
     - name: SAST-SEMGREP
-      run:
+      run: |
         python3 -m pip install semgrep
         semgrep login
         semgrep ci
+    needs: clone-code
+
+  build-and-scan:
+    runs-on: ubuntu-latest
+    needs: security-checks
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
 
     - name: Install kubectl
       uses: azure/setup-kubectl@v2.0
@@ -58,11 +76,10 @@ jobs:
       run: |
         docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
 
-
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@0.20.0
       with:
-        image-ref: '304520711562.dkr.ecr.us-east-1.amazonaws.com/app1:1.1'
+        image-ref: ${{ steps.login-ecr.outputs.registry }}/app1:1.1
         format: 'sarif'
         output: 'trivy-results-1.sarif'
 
@@ -74,6 +91,27 @@ jobs:
       run: |
         docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build-and-scan
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
+
+    - name: Install kubectl
+      uses: azure/setup-kubectl@v2.0
+      with:
+        version: 'v1.30.0' # default is latest stable
 
     - name: Update kube config
       run: aws eks update-kubeconfig --name eniyan-eks
