--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -25,8 +25,18 @@ jobs:
         fetch-depth: 0
 
     - name: Install TruffleHog
-      run: 
-        docker run --rm -v "$GITHUB_WORKSPACE:/tmp" trufflesecurity/trufflehog:latest --fail --no-update git file:///tmp/
+      id: trufflehog
+      run: |
+        docker run --rm -v "$GITHUB_WORKSPACE:/tmp" trufflesecurity/trufflehog:latest --fail --no-update git file:///tmp/ > trufflehog_output.txt
+        cat trufflehog_output.txt
+
+    - name: Check TruffleHog Results
+      run: |
+        unverified_secrets=$(grep -o '"unverified_secrets": [0-9]*' trufflehog_output.txt | awk '{print $2}')
+        if [ "$unverified_secrets" -ne "0" ]; then
+          echo "TruffleHog found unverified secrets. Failing the job."
+          exit 1
+        fi
 
     - name: Run Snyk to check for vulnerabilities
       uses: snyk/actions/node@master
